--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -47,3 +47,17 @@
 .item-detail__category {
     margin-top: 10px;
 }
+
+.item__button-finish-cart {
+    padding: 10px 5px;
+    width: 100%;
+    background-color: #00a160;
+    color: #fff;
+    border: 1px solid #00a160;
+    border-radius: 10px;
+    font-weight: 900;
+  }
+
+.item__button-finish-cart:hover {
+    cursor: pointer;
+  }
