--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,8 @@
   background-color: #e0e0e0;
   /* height: 100vh; */
   padding-bottom: 100px;
+
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
